Document Railway connection options

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,11 @@
 
 # Banco padrão em desenvolvimento local: utilize o host público do Railway
 # (Settings → Connect → Public) ou outro Postgres à sua escolha.
-# Exemplo para usar o Postgres do Railway externamente (substitua pelas suas credenciais):
-# DATABASE_URL=postgresql+psycopg://postgres:<senha>@<host-publico>.railway.app:5432/railway?sslmode=require
+# Para desenvolvimento local usando o proxy público da Railway (substitua host/porta):
+# DATABASE_URL=postgresql+psycopg://postgres:<senha>@shortline.proxy.rlwy.net:10834/railway?sslmode=require
+
+# Para serviços hospedados NA Railway use o host interno:
+# DATABASE_URL=postgresql+psycopg://postgres:<senha>@postgres.railway.internal:5432/railway
 
 # ATENÇÃO: o host `postgres.railway.internal` só funciona dentro da própria infraestrutura do Railway.
 # Para desenvolvimento local, use o host público acima ou deixe comentado para cair no SQLite.
