Projeto 5y planning - base inicial

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,24 @@
 # Copie este arquivo para backend/.env e ajuste os valores conforme o ambiente.
 
-# Banco padrão em desenvolvimento local: utilize o host público do Railway
-# (Settings → Connect → Public) ou outro Postgres à sua escolha.
-# Para desenvolvimento local usando o proxy público da Railway (substitua host/porta):
-# DATABASE_URL=postgresql+psycopg://postgres:<senha>@shortline.proxy.rlwy.net:10834/railway?sslmode=require
+# Defina abaixo a ordem de preferência:
+# 1. DATABASE_URL_LOCAL  → usado quando você tem um Postgres rodando na máquina (Docker/localhost).
+# 2. DATABASE_URL        → valor padrão/ambiente atual (Railway quando deployado).
+# 3. DATABASE_URL_REMOTE → fallback remoto para desenvolvimento (ex.: host público da Railway).
+# 4. SQLite local (data/forecast.db) caso nada acima esteja disponível.
 
-# Para serviços hospedados NA Railway use o host interno:
+# Exemplo de Postgres local (docker-compose, DBeaver, etc)
+# DATABASE_URL_LOCAL=postgresql+psycopg://postgres:senha@127.0.0.1:5432/forecast
+
+# Exemplo de banco remoto na Railway (host público → Settings → Connect → Public)
+# DATABASE_URL_REMOTE=postgresql+psycopg://postgres:<senha>@shortline.proxy.rlwy.net:10834/railway?sslmode=require
+
+# Em produção na Railway (host interno)
 # DATABASE_URL=postgresql+psycopg://postgres:<senha>@postgres.railway.internal:5432/railway
 
-# ATENÇÃO: o host `postgres.railway.internal` só funciona dentro da própria infraestrutura do Railway.
-# Para desenvolvimento local, use o host público acima ou deixe comentado para cair no SQLite.
-# DATABASE_URL=postgresql+psycopg://postgres:WjxaxsOPvSLvflWokyKqYvGFhQpEoabY@postgres.railway.internal:5432/railway
+# ATENÇÃO: o host `postgres.railway.internal` só funciona na infraestrutura da Railway.
+# No seu notebook use o host público (DATABASE_URL_REMOTE) para o fallback automático.
 
-# Caso queira ficar no SQLite local, basta manter essa linha comentada e o backend
-# voltará a usar o arquivo data/forecast.db.
+# Caso não configure nenhuma URL, o backend cai no SQLite local em data/forecast.db.
 
 # Token exigido para limpeza da base
 DELETE_CONFIRMATION_TEXT=DELETE-ALL
